css/custom-styles.css
/* --------------------------------------
Main Page Styles
----------------------------------------*/

body {
  position: relative;
}

.sepia-filter { 
  -webkit-filter: sepia(80%);
}


/* --------------------------------------
Navbar
----------------------------------------*/

.navbar {
  background-color: rgba(0, 0, 0, .7);
}

.navbar-brand {
  padding: 0;
}

a.navbar-brand {
  margin: 0;
}

#logo-text {
  display: inline-block;
  margin-bottom: 0;
  vertical-align: bottom;
}


/* --------------------------------------
Jumbotron
----------------------------------------*/

#titulo-principal {
  /* font-weight: normal; */
}

#title-gradient {
  font-weight: lighter;
}

#logo-follower {
  font-size: 0.75em;
}

.jumbotron {
 /*  background-color: rgba(36, 43, 34, .85); */
  background-image: url('../pics/Proyectos/Bingo-sur/bingo-3-bw.JPG');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

h1 {
  margin-top: 1em;
  padding-bottom: 2em;
}


/* --------------------------------------
Proyectos
----------------------------------------*/

/* Using Masonry JS for the image gallerry: */
.grid-sizer {
  width: 33.3%;
}

.grid-item {
  width: 33.3%;
  float: left;
}

#titulo-proyectos {
  border-bottom: 3px solid;
  border-top: 3px solid;
  padding: .5em;
}

#proyectos-galeria {

}

.no-gutters {
  margin-right: 0;
  margin-left: 0;
}


/* --------------------------------------
Presentación
----------------------------------------*/

.enfasis-logo {
  color: red;
}


/* --------------------------------------
Contacto
----------------------------------------*/

#contacto {
  background-color: rgba(0, 0, 0, .4);
}

#callout-btn {
  padding: 0.6em;
}

#formulario-contacto {}

#submit-button {}


/* --------------------------------------
Footer
----------------------------------------*/

.footer {
  background-color: rgba(0, 0, 0, .7);
}

footer a {
  color: rgba(0, 0, 0, .6);
}

footer a:hover, a:focus, a:active {
  color: rgba(119, 19, 5, .8);
}

#footer-logo {
  font-weight: bold;
  letter-spacing: 0.3em;
}


/* --------------------------------------
Paginas de los Proyectos
----------------------------------------*/

body.proyectos {
  background-color: rgba(0, 0, 0, .3);
}

footer.proyectos #footer-logo {
  color: rgba(0, 0, 0, .6);
}





/* --------------------------------------
Media Queries
----------------------------------------*/

@media only screen and (max-width: 500px) {
  #small-on-xs {
    font-size: 1.15em;
  }
  h1.display-3 {
    font-size: 3em;
    margin-top: 2em;
  }
}


@media only screen and (min-width: 500px) and (max-width: 750px) {
  h1.display-2 {
    font-size: 4em;
    margin-top: 1.75em;
  }
  h1 {
    padding-bottom: 1em;
  }
}

@media only screen and (max-width: 780px) {
  #callout-btn {
  padding: 0.5em;
  }
}

@media only screen and (max-width: 768px) {
  .grid-sizer {
    width: 50%;
  }

  .grid-item {
    width: 50%;
    float: left;
  }
}

@media only screen and (max-width: 544px) {
  .grid-sizer {
    width: 100%;
  }

  .grid-item {
    width: 100%;
    float: left;
  }
}

